--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -58,7 +58,9 @@ label {
     border: 1px solid #808080;
     border-radius: 4px;
     width: 360px;
-    height: 40px;
+    height: 24px;
+    font-size: 16px;
+        padding: 8px 16px;
 }
 
 .feedback-form input:hover {
@@ -69,5 +71,13 @@ label {
     border: 1px solid #808080;
     border-radius: 4px;
     width: 360px;
-    height: 80px;
+    height: 63px;
+    font-size: 16px;
+    padding: 8px 16px;
+}
+
+::placeholder {
+    font-family: "Montserrat", sans-serif;
+    color: #2e2f42;
+    font-size: 16px;
 }
